template/styles/text.css
body {
    font-family: 'Alegreya', 'Linux Libertine', 'Times', 'Times New Roman', serif;
    font-size: 1.1rem;
}
.monospace, pre {
    font-family: 'Droid Sans Mono', monospace;
}

a { color: #268bd2; }
a:visited { color: #d33682; }
a:hover { color: #2aa198; }
#page-header {
    color: #839496;
}
#page-header h1 {
    font-family: 'Droid Sans Mono', monospace;
    font-size: 3.5em;
    letter-spacing: -0.06em;
}
#page-header h1>a {
    text-decoration: none;
    color: inherit;
}
#page-header h1>a:hover {
    color: #eee8d5;
}
.space-correction {
    display: inline-block;
    width: 0.14em;
}
#tagline {
    padding-top: 0em;
    margin: 0;
    font-size: 1.3em;
    font-style: italic;
    padding-bottom: 1rem;
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'LinBiolinum', 'Optima', 'Candara', sans-serif;
    font-weight: normal;
}

.tab {
    text-align: center;
    font-size: 1.1rem;
}

#tab-bar a {
    text-decoration: none;
}
#follow {
    margin-top: auto;
    font-family: 'FontAwesome';
    font-size: 1.5rem;
}
#follow a {
    color: #586e75;
}
#follow a:hover {
    color: #eee8d5;
}
a#follow-github:hover {
    color: #f5f5f5;
}
a#follow-linkedin:hover {
    color: #0077b5;
}
#main-nav a {
    color: #eee8d5;
}
#main-nav .tab-current a {
    color: #fdf6e3;
}




#main-wrapper {
    color: black;
}


ul.sidebar-link-list {
    padding-left: 0em;
    list-style: none;
}
ol.sidebar-link-list {
    padding-left: 1em;
}
ol.sidebar-link-list>li {
    padding-left: 0.2em;
    margin: 0.75em 0;
}
#tags ul {
    columns: 2;
}
#bio {
    font-size: 0.9em;
    color: #657b83;
}

#footer-colour-wrapper footer {
    font-size: 0.9rem;
    color: #586e75
}
#page-footer h2 {
    font-size: 1.1em;
    margin-bottom: 0.3em;
    margin-top: 0;
    padding-bottom: 0.15em;
    border-bottom: 1px solid #586e7577;
}
.footer-nav-section ul {
    margin: 0;
    padding-left: 1rem;
}
.footer-nav-section a {
    color: inherit;
    text-decoration: none;
}
.footer-nav-section a:hover {
    color: #839496;
}



#main-wrapper h1 {
    font-size: 2.5em;
    display: block;
    margin-top: 1.5rem;
    margin-bottom: 0.25rem;
    padding-bottom: 0.25rem;
    border-bottom: 1px solid black;
}
#main-wrapper h1>a {
    text-decoration: none;
    color: inherit;
}
#main-wrapper h1>a:hover {
    color: #2aa198;
}
#main-header {
    margin-bottom: 1.5rem;
}
.summary h2 {
    font-size 1.8em;
    margin-bottom: 0rem;
}
.article-title a {
    text-decoration: none;
    color: black;
}
.article-title a:hover { color: #2aa198; }
span.byline {
    color: #657b83;
    font-style: italic;
    font-size: 0.9em;
}
span.author {
    font-family: 'Alegreya Small Caps', 'Linux Libertine', 'Times', 'Times New Roman', serif;
    font-style: italic;
    font-variant: small-caps;
}
span.tagsline a { text-decoration: none; color: inherit}
span.tagsline a:hover { color: #2aa198 !important; }

.page-link-separator { color: #657b83; }
#list-page-navigation a:visited { color: #268bd2; }
#list-page-navigation a:hover { color: #2aa198; }

main h2 {
    font-size: 1.7em;
    margin-top: 2.5rem;
    margin-bottom: 1rem;
}
.summary h2.article-title {
    font-size: 1.5em;
    margin-top: 1.5rem;
    margin-bottom: 0em;
}
main h3 {
    font-size: 1.35em;
    margin-top: 2.1rem;
    margin-bottom: 0.75rem;
    margin-left: 1rem;
}
main h4 {
    font-size: 1.15em;
    margin-top: 1.6rem;
    margin-bottom: 0.5rem;
    margin-left: 2rem;
}
p {
    margin: 1rem 0;
}
#article-text>p:first-child {
    margin-top: 0;
}

#article-text hr {
    border: 0;
    height: 1px;
    background: #93a1a188;
}

code {
    font-family: 'Droid Sans Mono', monospace;
    font-size: 0.77em;
    padding-left: 3px;
    padding-right: 3px;
    background: #eee8d5;
    border-radius: 5px;
    display: inline-block;
}
pre.chl {
    background: #002b36;
    border-radius: 10px;
    overflow-x: auto;
    margin: 16px 0;
    display: flex;
}
.chl code {
    border-radius: 0;
    padding-top: 5px;
    padding-bottom: 5px;
    display: block;
    background: none;
    margin: 0;
}
.chl>code:first-child {
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}
.chl>code:last-child {
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}
.chl .line-numbers {
    text-align: right;
    user-select: none;
    background: #073642;
    padding-left: 0.5em;
    padding-right: 0.5em;
    margin-right: 0.2em;
    min-width: 2.5em;
    color: #657b83;
}

blockquote {
    border-radius: 5px;
    background: #eee8d5;
    border-left: 10px solid #c1c5bb;
    padding: 1ex 0 1ex 1em;
    margin-left: 0;
    margin-right: 0;
}

blockquote>p:first-child {
    margin-top: 0;
}
blockquote>p:last-child {
    margin-bottom: 0;
}

main img {
    max-width: 100%;
    display: block;
    margin: 0 auto;
}


.katex {
    font-size: 1em !important;
}
.katex-display {
    overflow-x: auto;
    overflow-y: hidden;
}

